--- a/index.html
+++ b/index.html
@@ -225,16 +225,46 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Mary Smith
+                        </figcaption>
                     </figure>
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">
                             I had the best week ever with my family.
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eum eos exercitationem architecto aliquam accusantium officia nemo aspernatur quisquam ipsam inventore excepturi odit autem laudantium, et, ad commodi voluptatibus quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eum eos exercitationem
+                            architecto aliquam accusantium officia nemo aspernatur quisquam ipsam inventore excepturi
+                            odit autem laudantium, et, ad commodi voluptatibus quo. Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            John Wilson
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Wow! My life is completely different now
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eum eos exercitationem
+                            architecto aliquam accusantium officia nemo aspernatur quisquam ipsam inventore excepturi
+                            odit autem laudantium, et, ad commodi voluptatibus quo. Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
 
