Popup part I - Styling

--- a/index.html
+++ b/index.html
@@ -372,7 +372,22 @@
 
     <div class="popup">
         <div class="popup__content">
-            POPUP
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. A diam maecenas sed enim ut sem viverra aliquet eget.
+                    Suspendisse potenti nullam ac tortor vitae. Mi in nulla posuere sollicitudin. Sed augue lacus
+                    viverra vitae congue. Vitae elementum curabitur vitae nunc. Quam quisque id diam vel quam elementum
+                    pulvinar etiam. At erat pellentesque adipiscing commodo elit. Nulla facilisi etiam dignissim diam
+                    quis enim. A diam sollicitudin tempor id. In aliquam sem fringilla ut morbi. Massa eget egestas
+                    purus viverra accumsan in nisl. Vehicula ipsum a arcu cursus vitae congue mauris.</p>
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
         </div>
     </div>
     <!--
